Better edit for ConvolutionFilter + fixes